Bug 33027 - [Evergreen KMS] Crash with garbled screen on mode set
Summary: [Evergreen KMS] Crash with garbled screen on mode set
Status: RESOLVED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Radeon (show other bugs)
Version: XOrg git
Hardware: x86-64 (AMD64) Linux (All)
: medium critical
Assignee: Default DRI bug account
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-01-12 05:55 UTC by Serkan Hosca
Modified: 2011-02-14 15:11 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Picture of the screen (632.80 KB, image/jpeg)
2011-01-12 05:58 UTC, Serkan Hosca
no flags Details
dmesg from working 2.6.37-12-generic (60.46 KB, text/plain)
2011-01-12 06:03 UTC, Serkan Hosca
no flags Details
xorg log (46.80 KB, text/plain)
2011-01-12 06:04 UTC, Serkan Hosca
no flags Details
add gen2 module option (3.36 KB, patch)
2011-01-12 15:01 UTC, Alex Deucher
no flags Details | Splinter Review
lspci (10.27 KB, text/plain)
2011-01-12 15:03 UTC, Serkan Hosca
no flags Details

Description Serkan Hosca 2011-01-12 05:55:19 UTC
Ever since Linus merged drm-next, laptop crashes with garbled screen on modeset during boot. I haven't tried to ssh to the laptop yet.
Comment 1 Serkan Hosca 2011-01-12 05:58:21 UTC
Created attachment 41921 [details]
Picture of the screen
Comment 2 Serkan Hosca 2011-01-12 06:03:35 UTC
Created attachment 41922 [details]
dmesg from working 2.6.37-12-generic
Comment 3 Serkan Hosca 2011-01-12 06:04:25 UTC
Created attachment 41923 [details]
xorg log
Comment 4 Alex Deucher 2011-01-12 08:52:57 UTC
Can you bisect?
Comment 5 Serkan Hosca 2011-01-12 13:45:01 UTC
After countless reboots:

9e46a48df24f9698b34d28385b320c529851e5f7 is the first bad commit
commit 9e46a48df24f9698b34d28385b320c529851e5f7
Author: Alex Deucher <alexdeucher@gmail.com>
Date:   Thu Jan 6 18:49:35 2011 -0500

    drm/radeon/kms: add support for gen2 pcie link speeds
    
    Supported on rv6xx/r7xx/evergreen.  Cards come up in gen1 mode.
    
    Signed-off-by: Alex Deucher <alexdeucher@gmail.com>
    Signed-off-by: Dave Airlie <airlied@redhat.com>

:040000 040000 55843e87128e6be0103a644d565aa42cadfaa331 7c9afe069f4bc71eb2f815cf3e8fe0a9c96d7be8 M	drivers
Comment 6 Alex Deucher 2011-01-12 15:01:15 UTC
Created attachment 41939 [details] [review]
add gen2 module option

Seems there may be gen2 compat issues with some motherboards.  What chipset is your system?  Can you attach the lspci -vnn output?
Comment 7 Serkan Hosca 2011-01-12 15:03:38 UTC
Created attachment 41940 [details]
lspci
Comment 8 Serkan Hosca 2011-01-12 15:18:47 UTC
Its a second generation HP envy 15. According to google the chipset is PM55.
Comment 9 Serkan Hosca 2011-01-12 15:44:08 UTC
gen2 patch fixed the problem.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.